ci:update profile endpoint
